--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,93 +1,132 @@
-# This workflow installs the latest version of Terraform CLI and configures the Terraform CLI configuration file
-# with an API token for Terraform Cloud (app.terraform.io). On pull request events, this workflow will run
-# `terraform init`, `terraform fmt`, and `terraform plan` (speculative plan via Terraform Cloud). On push events
-# to the "master" branch, `terraform apply` will be executed.
-#
-# Documentation for `hashicorp/setup-terraform` is located here: https://github.com/hashicorp/setup-terraform
-#
-# To use this workflow, you will need to complete the following setup steps.
-#
-# 1. Create a `main.tf` file in the root of this repository with the `remote` backend and one or more resources defined.
-#   Example `main.tf`:
-#     # The configuration for the `remote` backend.
-#     terraform {
-#       backend "remote" {
-#         # The name of your Terraform Cloud organization.
-#         organization = "example-organization"
-#
-#         # The name of the Terraform Cloud workspace to store Terraform state files in.
-#         workspaces {
-#           name = "example-workspace"
-#         }
-#       }
-#     }
-#
-#     # An example resource that does nothing.
-#     resource "null_resource" "example" {
-#       triggers = {
-#         value = "A example resource that does nothing!"
-#       }
-#     }
-#
-#
-# 2. Generate a Terraform Cloud user API token and store it as a GitHub secret (e.g. TF_API_TOKEN) on this repository.
-#   Documentation:
-#     - https://www.terraform.io/docs/cloud/users-teams-organizations/api-tokens.html
-#     - https://help.github.com/en/actions/configuring-and-managing-workflows/creating-and-storing-encrypted-secrets
-#
-# 3. Reference the GitHub secret in step using the `hashicorp/setup-terraform` GitHub Action.
-#   Example:
-#     - name: Setup Terraform
-#       uses: hashicorp/setup-terraform@v1
-#       with:
-#         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
 name: 'Terraform'
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-
-permissions:
-  contents: read
+    branches: [ "main" ]
 
 jobs:
-  terraform:
-    name: 'Terraform'
-    runs-on: ubuntu-latest
-    environment: production
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
+  checkout:
+    name: 'Checkout Repository'
+    runs-on: terraform_runner
     steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+  setup-aws:
+    name: 'Configure AWS Credentials'
+    runs-on: terraform_runner
+    needs: checkout
+    steps:
+      - name: 'Configure AWS credentials'
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: 'ap-south-1'
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
+  setup-terraform:
+    name: 'Setup Terraform'
+    runs-on: terraform_runner
+    needs: [checkout, setup-aws]
+    steps:
+      - name: 'Set up Terraform'
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: '1.5.6'
 
-    # Checks that all Terraform configuration files adhere to a canonical format
-    - name: Terraform Format
-      run: terraform fmt -check
+  terraform-init:
+    name: 'Terraform Init'
+    runs-on: terraform_runner
+    needs: setup-terraform
+    steps:
+      - name: Terraform Init
+        run: terraform init
 
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      run: terraform plan -input=false
+  terraform-fmt:
+    name: 'Terraform Format Check'
+    runs-on: terraform_runner
+    needs: terraform-init
+    steps:
+      - name: Terraform Format (Auto-fix)
+        run: terraform fmt -recursive
 
-      # On push to "master", build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/"master"' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
+      - name: Terraform Format Check
+        run: terraform fmt -check
+
+
+  terraform-validate:
+    name: 'Terraform Validate'
+    runs-on: terraform_runner
+    needs: terraform-fmt
+    steps:
+      - name: Terraform Validate
+        run: terraform validate
+
+  install-tflint:
+    name: 'Install TFLint'
+    runs-on: terraform_runner
+    needs: terraform-validate
+    steps:
+      - name: 'Install TFLint'
+        run: |
+          curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+          echo "$HOME/.tflint/bin" >> $GITHUB_PATH  # Ensure it's available in the PATH
+          export PATH=$HOME/.tflint/bin:$PATH       # Immediate path update
+          tflint --version  # Verify installation
+      
+      
+  tflint-check:
+    name: 'Run TFLint'
+    runs-on: terraform_runner
+    needs: install-tflint
+    steps:
+      - name: 'TFLint'
+        run: |
+          tflint --init
+          tflint
+
+  install-tfsec:
+    name: 'Install tfsec'
+    runs-on: terraform_runner
+    needs: tflint-check
+    steps:
+      - name: 'Install tfsec'
+        run: |
+          curl -sLo tfsec https://github.com/aquasecurity/tfsec/releases/download/v1.28.1/tfsec-linux-amd64
+          chmod +x tfsec
+          sudo mv tfsec /usr/local/bin/
+          tfsec --version
+
+  tfsec-check:
+    name: 'Run tfsec'
+    runs-on: terraform_runner
+    needs: install-tfsec
+    steps:
+      - name: 'tfsec'
+        run: tfsec .
+
+  terraform-plan:
+    name: 'Terraform Plan'
+    runs-on: terraform_runner
+    needs: tfsec-check
+    steps:
+      - name: 'Terraform Plan'
+        run: terraform plan -out=tfplan
+
+  terraform-apply:
+    name: 'Terraform Apply'
+    runs-on: terraform_runner
+    needs: terraform-plan
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfplan
+
+  terraform-destroy:
+    name: 'Terraform Destroy'
+    runs-on: terraform_runner
+    needs: terraform-apply
+    if: github.event_name == 'workflow_dispatch'  # Only runs if manually triggered
+    steps:
+    - name: Terraform Destroy
+      run: terraform destroy -auto-approve
