--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -84,3 +84,24 @@ jobs:
         run: |
           tflint --init
           tflint
+
+  install-tfsec:
+    name: 'Install tfsec'
+    runs-on: terraform_runner
+    needs: tflint-check
+    steps:
+      - name: 'Install tfsec'
+        run: |
+          curl -sLo tfsec https://github.com/aquasecurity/tfsec/releases/download/v1.28.1/tfsec-linux-amd64
+          chmod +x tfsec
+          sudo mv tfsec /usr/local/bin/
+          tfsec --version
+
+  tfsec-check:
+    name: 'Run tfsec'
+    runs-on: terraform_runner
+    needs: install-tfsec
+    steps:
+    - name: 'Run tfsec and Save Output'
+      run: |
+        tfsec . --format json > tfsec.json
