--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -126,7 +126,7 @@ jobs:
     name: 'Terraform Apply'
     runs-on: terraform_runner
     needs: terraform-plan
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: 'Configure AWS credentials'
         uses: aws-actions/configure-aws-credentials@v1
